# epidemiology-project

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: devcontainer.json
data/: README.md
docs/: DATA_SOURCES.md  DATA_SOURCE_CANDIDATES.md  DECISIONS.md  GETTING_DATA_FROM_THE_WEB.md  PROJECT_CONTEXT.md  SCENARIO_DATASETS.md  UK_INFECTIOUS_DATA_SHORTLIST.md
notebooks/: 00_template.ipynb  00_tutorial_swagger_openapi_ukhsa.ipynb  01_ukhsa_respiratory_rsv_vs_flu.ipynb  02_ukhsa_covid_cases_time_vs_infected.ipynb  09_download_baseline_observed_ukhsa_covid_cases.ipynb  09a_standalone_ukhsa_covid_cases.ipynb  10_generate_baseline_no_intervention.ipynb  11_generate_intervention_scenarios.ipynb  12_compare_scenarios.ipynb  README.md
src/epidemiology_project/: __init__.py  io.py  paths.py  sir.py  ukhsa.py
