[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "epidemiology-project"
version = "0.1.0"
description = "First-year maths epidemiology project (Python + Jupyter)"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = [
  ".venv",
  "data",
  "reports",
  "figures",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
